Updated chicken biryani to use ghee

--- a/pages/Fitness/Recipes/Chicken_Biryani.mdx
+++ b/pages/Fitness/Recipes/Chicken_Biryani.mdx
@@ -8,25 +8,25 @@ This recipe is totally built from the ground up that I devised to meet the macro
 
 | Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
-| Calories | 960 | 40% |
+| Calories | 815 | 34% |
 | Protein | 78.1g | 32.5% |
 | Carbs | 93.5g | 35% |
-| Fat | 37.1g | 93% |
+| Fat | 19.1g | 48% |
 
 ## Ingredients
 
 | Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
 | ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
-| Chicken Breast | 0.5lb (227g) | 70g | 0g | 8.1g | 374 |
+| Chicken Breast | 0.5 lb (227g) | 70g | 0g | 8.1g | 374 |
 | Medium Yellow Onion | 1 | 1g | 11g | 0g | 46 |
 | Jalapeno | 14g | 0.1g | 0.5g | 0g | 4 |
 | Serrano | 1 cup | 2g | 7g | 0.5g | 34 |
 | Garlic | 4 cloves | 2g | 12g | 0g | 52 |
 | White Basmati Rice | 1 cup (163g) | 4g | 46g | 0.5g | 210 |
 | Chicken Stock | 1 cup | 1g | 0g | 0g | 5 |
-| Olive Oil | 2Tbsp | 0g | 0g | 28g | 240 |
+| Ghee | 2 tbsp | 0g | 0g | 19.1g | 90 |
 |  |  |  |  |  |  |
-| Totals |  | 78.1g | 93.5g | 37.1g | 960 |
+| **Totals** | **=** | **78.1g** | **93.5g** | **37.1g** | **815** |
 
 Add spices by taste - Cumin, Red Chili Powder, Salt, Turmeric, and Biryani Spice Packets
 
@@ -41,7 +41,22 @@ Add spices by taste - Cumin, Red Chili Powder, Salt, Turmeric, and Biryani Spice
 
 ## Substitions
 Swap Olive Oil for: 
-[Find suitable low calorie replacement]
+*Ghee*
+
+Original Recipe with Olive Oil had x more calories and y more grams of fat
+
+| Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
+| ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
+| Chicken Breast | 0.5lb (227g) | 70g | 0g | 8.1g | 374 |
+| Medium Yellow Onion | 1 | 1g | 11g | 0g | 46 |
+| Jalapeno | 14g | 0.1g | 0.5g | 0g | 4 |
+| Serrano | 1 cup | 2g | 7g | 0.5g | 34 |
+| Garlic | 4 cloves | 2g | 12g | 0g | 52 |
+| White Basmati Rice | 1 cup (163g) | 4g | 46g | 0.5g | 210 |
+| Chicken Stock | 1 cup | 1g | 0g | 0g | 5 |
+| Olive Oil | 2Tbsp | 0g | 0g | 28g | 240 |
+|  |  |  |  |  |  |
+| **Totals** | **=** | **78.1g** | **93.5g** | **37.1g** | **960** |
 
 ## Instructions
 
@@ -86,6 +101,6 @@ To make multiple servings at a time, just multiply every gram amount by the numb
 | Garlic | 12 cloves | 6g | 36g | 0g | 156 |
 | White Basmati Rice | 3 cup (489g) | 12g | 138g | 1.5g | 630 |
 | Chicken Stock | 3 cup | 3g | 0g | 0g | 15 |
-| Olive Oil | 6 Tbsp | 0g | 0g | 84g | 720 |
+| Ghee | 6 tbsp | 0g | 0g | 30g | 270 |
 |  |  |  |  |  |  |
-| Totals |  | 78.1g | 93.5g | 37.1g | 2895 |
+| **Totals** | **=** | **240.3g** | **229.5g** | **57.1g** | **2445** |
