--- a/pages/Fitness/Recipes/Egg_White_Bagel.mdx
+++ b/pages/Fitness/Recipes/Egg_White_Bagel.mdx
@@ -24,7 +24,7 @@
 | Crushed Red Pepper | 1 tsp | 0g | 0g | 0g | 0 |
 | Cayenne Pepper | 1 tsp | 0g | 0g | 0g | 0 |
 |  |  |  |  |  |  |
-| Totals |  | 36g | 62g | 15.5g | 555 |
+| **Totals** | **=** | **36g** | **62g** | **15.5g** | **555** |
 
 ## Nutrition Reference
 - [Whole Foods Everything Bagel](https://www.wholefoodsmarket.com/product/bagel-everything-b08pwshzp2) 
