--- a/pages/Fitness/Recipes/Template.mdx
+++ b/pages/Fitness/Recipes/Template.mdx
@@ -28,7 +28,7 @@ Note
 |  |  |  |  |  |  |
 |  |  |  |  |  |  |
 |  |  |  |  |  |  |
-| Totals |  | g | g | g |  |
+| **Totals** | **=**  | **g** | **g** | **g** |  |
 
 ## Nutrition Reference
 
