lotsa spicy updates

--- a/pages/Fitness/Personal_Journey/Meal_Plan.mdx
+++ b/pages/Fitness/Personal_Journey/Meal_Plan.mdx
@@ -4,25 +4,59 @@
 
 I will be intermittent fasting. Eating between 12pm and 8pm everyday. The goal will be to consume four meals and hit all my macros every single day.
 
-Macros:
-
+Macros (Breakfast + Lunch + Snack + Dinner):
+| Item | Measurement | % of Total Calories (2400) |
+| ----------- | ----------- | ----------- |
+| Calories |  | % |
+| Protein | g | % |
+| Carbs | g | % |
+| Fat | g | % |
 
 ## Breakfast
 
-12PM
-Egg White Bagel Sandwich
+**12PM**
+[Egg White Bagel Sandwich](https://notes.salmanmalik.co/Fitness/Recipes/Egg_White_Bagel)
+| Item | Measurement | % of Total Calories (2400) |
+| ----------- | ----------- | ----------- |
+| Calories | 436 | 18% |
+| Protein | 36g | 15% |
+| Carbs | 62g | 23% |
+| Fat | 1g | 1% |
 
 ## Snack
 
-2PM/4PM
-Protein Shake
+**2PM/4PM**
+Protein Shake - EPH Labs
+| Item | Measurement | % of Total Calories (2400) |
+| ----------- | ----------- | ----------- |
+| Calories | 140 | % |
+| Protein | 25g | % |
+| Carbs | 3g | % |
+| Fat | 1.5g | % |
+
+**OR**
+
+Protein Bar - nocow
+| Item | Measurement | % of Total Calories (2400) |
+| ----------- | ----------- | ----------- |
+| Calories | 200 | % |
+| Protein | 20g | % |
+| Carbs | 26g | % |
+| Fat | 5g | % |
+
 
 ## Lunch
 
-6PM
+**6PM**
 Steak and Brown Rice
 
 ## Dinner
 
-8PM
-Chicken Biryani
+**8PM**
+[Chicken Biryani](https://notes.salmanmalik.co/Fitness/Recipes/Chicken_Biryani)
+| Item | Measurement | % of Total Calories (2400) |
+| ----------- | ----------- | ----------- |
+| Calories | 815 | 34% |
+| Protein | 78.1g | 32.5% |
+| Carbs | 93.5g | 35% |
+| Fat | 19.1g | 48% |
