--- a/pages/Fitness/Recipes/Chicken_Biryani.mdx
+++ b/pages/Fitness/Recipes/Chicken_Biryani.mdx
@@ -1,6 +1,10 @@
+import { Callout } from 'nextra-theme-docs'
+ 
 # Chicken Biryani
 
-This recipe is totally built from the ground up that I devised to meet the macros I am trying to hit, this is an experiment.
+<Callout type="note" emoji="⚠️">
+  This recipe is totally built from the ground up that I devised to meet the macros I am trying to hit, this is an experiment.
+</Callout>
 
 ## Macros
 
@@ -38,6 +42,7 @@ Add spices by taste - Cumin, Red Chili Powder, Salt, Turmeric, and Biryani Spice
 - [Serrano](https://www.verywellfit.com/serrano-pepper-nutrition-facts-4589479) 
 - [Single Clove of Garlic](https://www.urmc.rochester.edu/encyclopedia/content.aspx?contenttypeid=76&contentid=11215-4) 
 - [1 lb Chicken Breast](https://www.myfitnesspal.com/food/calories/1-lb-chicken-breast-446675184) 
+- [Organic Valley Ghee Clarified Butter](https://www.myfooddiary.com/foods/7335467/organic-valley-ghee-clarified-butter)
 
 ## Substitions
 Swap Olive Oil for: 
