--- a/pages/Fitness/Recipes/Egg_White_Bagel.mdx
+++ b/pages/Fitness/Recipes/Egg_White_Bagel.mdx
@@ -1,18 +1,42 @@
 # Egg White Bagel Sandwich
  
-
 ## Macros
 
 **Serving Size = 1**
 
 | Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
-| Calories | 555 | 23% |
+| Calories | 436 | 18% |
 | Protein | 36g | 15% |
 | Carbs | 62g | 23% |
-| Fat | 15.5g | 39% |
+| Fat | 1g | 1% |
 
 ## Ingredients
+
+| Item | Qty/Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
+| ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
+| Everything Bagel | 1 | 9g | 62g | 1.5g | 310 |
+| Egg Whites | 8 oz | 25g | 0g | 0g | 125 |
+| Canola Oil | 1 spray | 0g | 0g | 1g | 1 |
+| Red Chilli Powder | 2 tsp | 0g | 0g | 0g | 0 |
+| Salt | 1 tsp | 0g | 0g | 0g | 0 |
+| Crushed Red Pepper | 1 tsp | 0g | 0g | 0g | 0 |
+| Cayenne Pepper | 1 tsp | 0g | 0g | 0g | 0 |
+|  |  |  |  |  |  |
+| **Totals** | **=** | **36g** | **62g** | **1g** | **436** |
+
+## Nutrition Reference
+- [Whole Foods Everything Bagel](https://www.wholefoodsmarket.com/product/bagel-everything-b08pwshzp2) 
+- [365 Organic Outdoor Access Egg Whites](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-cage-free-liquid-egg-whites-16-oz-b074h5m1pm) 
+- [Terra Delyssa Tunisian Organic Extra Virgin Olive Oil](https://www.recipal.com/ingredients/158153-nutrition-facts-calories-protein-carbs-fat-terra-delyssa-organic-extra-virgin-olive-oil) 
+- [365 Organic Canola Oil Cooking Spray](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-expeller-pressed-canola-oil-nonstick-cooking-spray-5-fl-oz-b074h737k3)
+
+## Substitions 
+Swap Olive Oil for: 
+[Find suitable low calorie replacement] 
+Organic Canola Oil Spray
+
+Original Recipe with Olive Oil had **119** more calories and **14.5** more grams of fat
 
 | Item | Qty/Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
 | ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
@@ -25,15 +49,6 @@
 | Cayenne Pepper | 1 tsp | 0g | 0g | 0g | 0 |
 |  |  |  |  |  |  |
 | **Totals** | **=** | **36g** | **62g** | **15.5g** | **555** |
-
-## Nutrition Reference
-- [Whole Foods Everything Bagel](https://www.wholefoodsmarket.com/product/bagel-everything-b08pwshzp2) 
-- [365 Organic Outdoor Access Egg Whites](https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-cage-free-liquid-egg-whites-16-oz-b074h5m1pm) 
-- [Terra Delyssa Tunisian Organic Extra Virgin Olive Oil](https://www.recipal.com/ingredients/158153-nutrition-facts-calories-protein-carbs-fat-terra-delyssa-organic-extra-virgin-olive-oil) 
-
-## Substitions 
-Swap Olive Oil for: 
-[Find suitable low calorie replacement] 
 
 ## Instructions
 
