--- a/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
+++ b/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
@@ -24,7 +24,7 @@
 |  |  |  |  |  |  |
 |  |  |  |  |  |  |
 |  |  |  |  |  |  |
-| Totals |  | g | g | g |  |
+| **Totals** | **=**  | **g** | **g** | **g** |  |
 
 ## Nutrition Reference
 
