updated meal plan

--- a/pages/Fitness/Personal_Journey/Meal_Plan.mdx
+++ b/pages/Fitness/Personal_Journey/Meal_Plan.mdx
@@ -4,13 +4,13 @@
 
 I will be intermittent fasting. Eating between 12pm and 8pm everyday. The goal will be to consume four meals and hit all my macros every single day.
 
-Macros (Breakfast + Lunch + Snack + Dinner):
+**Macros (Breakfast + Lunch + Snack + Dinner):**
 | Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
-| Calories |  | % |
-| Protein | g | % |
-| Carbs | g | % |
-| Fat | g | % |
+| Calories | 2262 | **94%%** |
+| Protein | 206.1g | **86%%** |
+| Carbs | 252.5g | **94%%** |
+| Fat | 47.6g | **119%** |
 
 ## Breakfast
 
@@ -29,26 +29,33 @@ Macros (Breakfast + Lunch + Snack + Dinner):
 Protein Shake - EPH Labs
 | Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
-| Calories | 140 | % |
-| Protein | 25g | % |
-| Carbs | 3g | % |
-| Fat | 1.5g | % |
+| Calories | 140 | 5% |
+| Protein | 25g | 10% |
+| Carbs | 3g | 1% |
+| Fat | 1.5g | 4% |
 
 **OR**
 
 Protein Bar - nocow
 | Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
-| Calories | 200 | % |
-| Protein | 20g | % |
-| Carbs | 26g | % |
-| Fat | 5g | % |
+| Calories | 200 | 8% |
+| Protein | 20g | 8% |
+| Carbs | 26g | 10% |
+| Fat | 5g | 13% |
 
 
 ## Lunch
+[Steak and Brown Rice](https://notes.salmanmalik.co/Fitness/Recipes/Steak_and_Brown_Rice)
 
 **6PM**
 Steak and Brown Rice
+| Item | Measurement | % of Total Calories (2400) |
+| ----------- | ----------- | ----------- |
+| Calories | 871 | 36% |
+| Protein | 67g | 28% |
+| Carbs | 94g | 35% |
+| Fat | 26g | 65% |
 
 ## Dinner
 
