--- a/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
+++ b/pages/Fitness/Recipes/Steak_and_Brown_Rice.mdx
@@ -6,10 +6,10 @@
 
 | Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
-| Calories |  |  |
-| Protein |  |  |
-| Carbs |  |  |
-| Fat |  |  |
+| Calories | 871 | 36% |
+| Protein | 67g | 28% |
+| Carbs | 94g | 35% |
+| Fat | 26g | 65% |
 
 ## Ingredients
 
