update to meal plan

--- a/pages/Fitness/Personal_Journey/Meal_Plan.mdx
+++ b/pages/Fitness/Personal_Journey/Meal_Plan.mdx
@@ -7,9 +7,9 @@ I will be intermittent fasting. Eating between 12pm and 8pm everyday. The goal w
 **Macros (Breakfast + Lunch + Snack + Dinner):**
 | Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
-| Calories | 2262 | **94%%** |
-| Protein | 206.1g | **86%%** |
-| Carbs | 252.5g | **94%%** |
+| Calories | 2262 | **94%** |
+| Protein | 206.1g | **86%** |
+| Carbs | 252.5g | **94%** |
 | Fat | 47.6g | **119%** |
 
 ## Breakfast
@@ -46,10 +46,9 @@ Protein Bar - nocow
 
 
 ## Lunch
-[Steak and Brown Rice](https://notes.salmanmalik.co/Fitness/Recipes/Steak_and_Brown_Rice)
 
 **6PM**
-Steak and Brown Rice
+[Steak and Brown Rice](https://notes.salmanmalik.co/Fitness/Recipes/Steak_and_Brown_Rice)
 | Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
 | Calories | 871 | 36% |
