updated macros and recipes

--- a/pages/Fitness/Recipes/Chicken_Biryani.mdx
+++ b/pages/Fitness/Recipes/Chicken_Biryani.mdx
@@ -12,16 +12,16 @@ import { Callout } from 'nextra-theme-docs'
 
 | Item | Measurement | % of Total Calories (2400) |
 | ----------- | ----------- | ----------- |
-| Calories | 815 | 34% |
-| Protein | 78.1g | 32.5% |
-| Carbs | 93.5g | 35% |
-| Fat | 19.1g | 48% |
+| Calories | 1189 | 49% |
+| Protein | 149.1g | 62% |
+| Carbs | 93.5g | 39% |
+| Fat | 36.3g | 66% |
 
 ## Ingredients
 
 | Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
 | ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
-| Chicken Breast | 0.5 lb (227g) | 70g | 0g | 8.1g | 374 |
+| Chicken Breast | 1.0 lb (227g) | 139g | 0g | 16.2g | 748 |
 | Medium Yellow Onion | 1 | 1g | 11g | 0g | 46 |
 | Jalapeno | 14g | 0.1g | 0.5g | 0g | 4 |
 | Serrano | 1 cup | 2g | 7g | 0.5g | 34 |
@@ -30,7 +30,7 @@ import { Callout } from 'nextra-theme-docs'
 | Chicken Stock | 1 cup | 1g | 0g | 0g | 5 |
 | Ghee | 2 tbsp | 0g | 0g | 19.1g | 90 |
 |  |  |  |  |  |  |
-| **Totals** | **=** | **78.1g** | **93.5g** | **37.1g** | **815** |
+| **Totals** | **=** | **149.1g** | **93.5g** | **36.3g** | **1189** |
 
 Add spices by taste - Cumin, Red Chili Powder, Salt, Turmeric, and Biryani Spice Packets
 
@@ -95,7 +95,7 @@ That's it.
 ## Multiple Servings
 To make multiple servings at a time, just multiply every gram amount by the number of servings you'd like to make.
 
-### 3 Serving Example
+### 3 Serving Example *(Not updated to reflect new recipe above that has 1lb Chicken breast per serving)*
 
 | Item | Weight (g/oz/lb) | Protein (g) | Carbs (g) | Fat (g) | Calories |
 | ----------- | ----------- | ----------- |	----------- | ----------- | ----------- |
