Added link from recipe to macros on calorie count

--- a/pages/Fitness/Recipes/Chicken_Biryani.mdx
+++ b/pages/Fitness/Recipes/Chicken_Biryani.mdx
@@ -10,7 +10,7 @@ import { Callout } from 'nextra-theme-docs'
 
 **Serving Size = 1**
 
-| Item | Measurement | % of Total Calories (2400) |
+| Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
 | ----------- | ----------- | ----------- |
 | Calories | 1189 | 49% |
 | Protein | 149.1g | 62% |
