--- a/pages/Fitness/Recipes/Egg_White_Bagel.mdx
+++ b/pages/Fitness/Recipes/Egg_White_Bagel.mdx
@@ -4,7 +4,7 @@
 
 **Serving Size = 1**
 
-| Item | Measurement | % of Total Calories (2400) |
+| Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
 | ----------- | ----------- | ----------- |
 | Calories | 436 | 18% |
 | Protein | 36g | 15% |
