--- a/pages/Fitness/Recipes/Steak.mdx
+++ b/pages/Fitness/Recipes/Steak.mdx
@@ -4,7 +4,7 @@
 
 **Serving Size = 1**
 
-| Item | Measurement | % of Total Calories (2403) |
+| Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
 | ----------- | ----------- | ----------- |
 | Calories | 810 | 34% |
 | Protein | 61.2g | 26% |
