updated meal plan

--- a/pages/Fitness/Journey/Meal_Plan.mdx
+++ b/pages/Fitness/Journey/Meal_Plan.mdx
@@ -17,7 +17,7 @@ I will be intermittent fasting. Eating between 12pm and 8pm everyday. The goal w
 | Carbs | 62g | 23% |
 | Fat | 1g | 1% |
 
-## Snack *(Optional if I miss one of the main three meals)*
+## Snacks
 
 **2PM/4PM**
 Snack 1 - Protein Shake - EPH Labs
