--- a/pages/Projects/Image_To_Text_App/Amplify.mdx
+++ b/pages/Projects/Image_To_Text_App/Amplify.mdx
@@ -6,7 +6,7 @@ Your project has been successfully initialized and connected to the cloud!
 
 Some next steps:
 - "amplify status" will show you what you've added already and if it's locally configured or deployed
-- "amplify add <category>" will allow you to add features like user login or a backend API
+- "amplify add *category*" will allow you to add features like user login or a backend API
 - "amplify push" will build all your local backend resources and provision it in the cloud
 - "amplify console" to open the Amplify Console and view your project status
 - "amplify publish" will build all your local backend and frontend resources (if you have hosting category added) and provision it in the cloud
