Updated Supplements Page

--- a/pages/Fitness/Supplements.mdx
+++ b/pages/Fitness/Supplements.mdx
@@ -1,2 +1,17 @@
 # Supplements
+These are the supplements Dr. Mike suggested I start consuming during the Sculpt By Science 4 month program
 
+## Fitness Related Supplements
+| Supplement | Purpose | Order Link |
+| ----------- | ----------- | ----------- |
+| NatureWise Vegan Vitamin D3 5000iu (125 mcg) + Vitamin K2 (100mcg VitaMK7) Healthy Muscle Function, and Immune Support, Non-GMO, Gluten Free in Cold-Pressed Olive Oil | Bone Health / Immune Support / Muscle Function | [Buy](https://www.amazon.com/gp/product/B09K4Q68H9/ref=ppx_yo_dt_b_asin_title_o01_s00?ie=UTF8&psc=1) |
+| NATURELO Whole Food Multivitamin + Immune Blend with Elderberry & Mushrooms - Complete Multivitamin with Extra Immune Support - C, D3, Zinc, Elderberry, Reishi, Shitake - 60 Vegan Capsules | Energy, Heart, and Immune Health | [Buy](https://www.amazon.com/gp/product/B094NY91P2/ref=ppx_yo_dt_b_asin_title_o03_s00?ie=UTF8&psc=1) |
+| FarmHaven Magnesium Glycinate & Malate Complex w/Vitamin D3, 100% Chelated for Max Absorption, Vegan – Bone Health, Nerves, Muscles | Promotes Relaxation and Sleep | [Buy](https://www.amazon.com/gp/product/B0855JG69W/ref=ppx_yo_dt_b_asin_title_o05_s00?ie=UTF8&psc=1) |
+
+
+## PRK Related Supplements
+| Supplement | Purpose | Order Link |
+| ----------- | ----------- | ----------- |
+| Nature Made Extra Strength Dosage Chewable Vitamin C 1000 mg per serving, Dietary Supplement for Immune Support | Boost immune system during recovery | [Buy](https://www.amazon.com/dp/B08FNG91XM/ref=redir_mobile_desktop) |
+| PRN De3 Dry Eye Omega 3 Fish Oil –Support for Eye Dryness - 2240mg EPA & DHA Supplement in Natural Triglyceride Formula – New & Improved Formula for Healthy Eye Care-3 Serving per Day, 3 Month Supply | Increases moisture in eyes | [Buy](https://www.amazon.com/De3-Dry-Eye-Omega-Benefits/dp/B07ZFX66M9/ref=sr_1_1_sspa) |
+| Nordic Naturals Ultimate Omega Xtra, Lemon Flavor - 60 Soft Gels - 1480 mg Omega-3 + 1000 IU Vitamin D3 - Omega-3 Fish Oil - EPA & DHA - Brain, Heart, Joint, & Immune Health - 30 Servings | Alternative to above PRN De3 Capsules | [Buy](https://www.amazon.com/gp/product/B005SV2SCO/ref=ppx_yo_dt_b_asin_title_o00_s01?ie=UTF8&psc=1) |
