Updated body measurements page

--- a/pages/Fitness/Journey/Measurements.mdx
+++ b/pages/Fitness/Journey/Measurements.mdx
@@ -2,14 +2,24 @@
 
 ## Starting Body Measurements
 
-- Waist
-- Arms
-- Legs
-- Chest
+| Body Park | Measurement |
+| ----------- | ----------- |
+| Waist | 46.0in |
+| Arms | 13.7in |
+| Legs | 33.7in |
+| Chest | 43.6in |
+| Shoulders | 22.0in |
+| Hips | 46.0in |
+| Calves | 16.5in |
 
 ## Ending Body Measurements
 
-- Waist
-- Arms
-- Legs
-- Chest
+| Body Park | Measurement |
+| ----------- | ----------- |
+| Waist |  |
+| Arms |  |
+| Legs |  |
+| Chest |  |
+| Shoulders |  |
+| Hips |  |
+| Calves |  |
