--- a/pages/Fitness/Journey/Refeed.mdx
+++ b/pages/Fitness/Journey/Refeed.mdx
@@ -3,10 +3,13 @@
 The main approach here is that carbs should be increased in order to provide increased satiation as well as carb stores ready to be burned the following day for a more energetic workout. 
 
 369g carb - **+125g** = +500 cal 
+
 64g Fat - **+10g** = +90 cal 
+
 221g Protein - **-20g** cal = -80 cal 
 
-Adding 500 Calories for refeed (actual, 510 calories)
+
+*Adding 500 Calories for refeed (actual, 510 calories)*
 
 ## Refeed Macros
 | Item | Measurement | % of Total Calories (2903) |
