--- a/pages/Fitness/Recipes/Ingredient_Macros.mdx
+++ b/pages/Fitness/Recipes/Ingredient_Macros.mdx
@@ -8,10 +8,11 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 | ----------- | ----------- |
 | 1 lb | 454g |
 | 1 oz | 28g |
-| 1 ? | g |
-| 1 ? | g |
+| 1 Tbsp | 5g |
+| 1 ? | ?g |
 
-## Chicken Thighs (1lb)
+## Proteins
+### Chicken Thighs (1lb)
 [Reference](https://www.mynetdiary.com/food/calories-in-chicken-thigh-meat-only-raw-thigh-bone-and-skin-removed-yield-from-1-lb-ready-to-cook-chicken-5096-0.html)
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
@@ -24,7 +25,8 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 <Callout type="note" emoji="⚠️">
   Fill out the rest of the macros for the ingredients below!
 </Callout>
-##Chicken Breasts (1lb)
+
+### Chicken Breasts (1lb)
 [Reference]()
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
@@ -34,7 +36,7 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 | Carbs | g | % |
 | Fat | g | % |
 
-##Steak (Top Sirloin) (1lb)
+### Steak (Top Sirloin) (1lb)
 [Reference]()
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
@@ -44,7 +46,7 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 | Carbs | g | % |
 | Fat | g | % |
 
-##Steak (Flank) (1lb)
+### Steak (Flank) (1lb)
 [Reference]()
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
@@ -54,7 +56,7 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 | Carbs | g | % |
 | Fat | g | % |
 
-##Steak (Ribeye) (1lb)
+### Steak (Ribeye) (1lb)
 [Reference]()
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
@@ -64,7 +66,8 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 | Carbs | g | % |
 | Fat | g | % |
 
-##Cherry Tomatoes (1 cup)
+## Carbs
+### White Basmati Rice (1 cup)
 [Reference]()
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
@@ -74,7 +77,7 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 | Carbs | g | % |
 | Fat | g | % |
 
-##Onions (1 medium)
+### Brown Basmasti Rice (1 cup)
 [Reference]()
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
@@ -84,7 +87,7 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 | Carbs | g | % |
 | Fat | g | % |
 
-##Garlic (1 bulb)
+### Cherry Tomatoes (1 cup)
 [Reference]()
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
@@ -94,7 +97,7 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 | Carbs | g | % |
 | Fat | g | % |
 
-##Jalapeno Peppers (100 grams)
+### Onions (1 medium)
 [Reference]()
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
@@ -104,7 +107,48 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 | Carbs | g | % |
 | Fat | g | % |
 
-##Serrano Peppers (100 grams)
+### Garlic (1 bulb)
+[Reference]()
+
+| Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
+| ----------- | ----------- | ----------- |
+| Daily Caloric Intake (DCI) | 2403 Calories | 100% |
+| Protein | g | % |
+| Carbs | g | % |
+| Fat | g | % |
+
+### Jalapeno Peppers (100 grams)
+[Reference]()
+
+| Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
+| ----------- | ----------- | ----------- |
+| Daily Caloric Intake (DCI) | 2403 Calories | 100% |
+| Protein | g | % |
+| Carbs | g | % |
+| Fat | g | % |
+
+### Serrano Peppers (100 grams)
+[Reference]()
+
+| Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
+| ----------- | ----------- | ----------- |
+| Daily Caloric Intake (DCI) | 2403 Calories | 100% |
+| Protein | g | % |
+| Carbs | g | % |
+| Fat | g | % |
+
+## Fats
+### Ghee (10 grams)
+[Reference]()
+
+| Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
+| ----------- | ----------- | ----------- |
+| Daily Caloric Intake (DCI) | 2403 Calories | 100% |
+| Protein | g | % |
+| Carbs | g | % |
+| Fat | g | % |
+
+### Olive Oil (10 grams)
 [Reference]()
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
