added Chicken Breast Macros

--- a/pages/Fitness/Recipes/Ingredient_Macros.mdx
+++ b/pages/Fitness/Recipes/Ingredient_Macros.mdx
@@ -27,14 +27,14 @@ This is a comprehensive list of the macros by individual ingredients. This list 
 </Callout>
 
 ### Chicken Breasts (1 lb)
-[Reference]()
+[Reference](https://www.myfitnesspal.com/food/calories/1-lb-chicken-breast-446675184)
 
 | Item | Measurement | % of Total Calories ([2403](https://notes.salmanmalik.co/Fitness/Journey/Macros)) |
 | ----------- | ----------- | ----------- |
 | Daily Caloric Intake (DCI) | 2403 Calories | 100% |
-| Protein | g | % |
-| Carbs | g | % |
-| Fat | g | % |
+| Protein | 139g | 58% |
+| Carbs | 0g | 0% |
+| Fat | 16.2g | 29% |
 
 ### Steak (Top Sirloin) (1 lb)
 [Reference]()
