Updated weight and measurements page

--- a/pages/Fitness/Journey/Measurements.mdx
+++ b/pages/Fitness/Journey/Measurements.mdx
@@ -2,17 +2,35 @@
 
 ## Starting Body Measurements
 
+0 Months
+
 | Body Park | Measurement |
 | ----------- | ----------- |
-| Waist | 46.0in |
-| Arms | 13.7in |
-| Legs | 33.7in |
-| Chest | 43.6in |
-| Shoulders | 22.0in |
-| Hips | 46.0in |
-| Calves | 16.5in |
+| Waist | 46.0 in |
+| Arms | 13.7 in |
+| Legs | 33.7 in |
+| Chest | 43.6 in |
+| Shoulders | 22.0 in |
+| Hips | 46.0 in |
+| Calves | 16.5 in |
+
+## Mid Point Body Measurements
+
+2 Months
+
+| Body Park | Measurement |
+| ----------- | ----------- |
+| Waist | 43.5 in |
+| Arms | 15.0 in |
+| Legs | 33.7 in |
+| Chest | 43.1 in |
+| Shoulders | 22.5 in |
+| Hips | 44.5 in |
+| Calves | 16.3 in |
 
 ## Ending Body Measurements
+
+4 Months
 
 | Body Park | Measurement |
 | ----------- | ----------- |
