--- a/pages/Fitness/Journey/Weight.mdx
+++ b/pages/Fitness/Journey/Weight.mdx
@@ -10,9 +10,9 @@
 
 ## Progress
 
-| Week | Weight | Fat % |
+| Week | Weight (lb) | Fat % |
 | ----------- | ----------- | ----------- |	
-| 0 | 239.0 | 33% |
+| **0** | **239.0** | **33%** |
 | 1 | 237.2 | 33% |
 | 2 | 231.2 | 31% |
 | 3 | 231.9 | 31% |
@@ -20,7 +20,7 @@
 | 5 | 227.9 | 30% |
 | 6 | 225.2 | 30% |
 | 7 | 222.0 | 30% |
-| 8 |  |  |
+| **8** | **224.0** | **30%** |
 | 9 |  |  |
 | 10 |  |  |
 | 11 |  |  |
@@ -28,7 +28,7 @@
 | 13 |  |  |
 | 14 |  |  |
 | 15 |  |  |
-| 16 |  |  |
+| **16** | **** | **%** |
 
 ## Actual Ending Weight
 
