added in inch difference and % difference to measurements table

--- a/pages/Fitness/Journey/Measurements.mdx
+++ b/pages/Fitness/Journey/Measurements.mdx
@@ -4,7 +4,7 @@
 
 0 Months
 
-| Body Park | Measurement |
+| Body Part | Measurement |
 | ----------- | ----------- |
 | Waist | 46.0 in |
 | Arms | 13.7 in |
@@ -18,26 +18,26 @@
 
 2 Months
 
-| Body Park | Measurement |
-| ----------- | ----------- |
-| Waist | 43.5 in |
-| Arms | 15.0 in |
-| Legs | 33.7 in |
-| Chest | 43.1 in |
-| Shoulders | 22.5 in |
-| Hips | 44.5 in |
-| Calves | 16.3 in |
+| Body Part | Measurement | Difference (in) |  Difference (%) |
+| ----------- | ----------- | ----------- | ----------- |
+| Waist | 43.5 in | -2.5 in | -6% |
+| Arms | 15.0 in | +1.3 in | +9% |
+| Legs | 33.7 in | +0.0 in | +0% |
+| Chest | 43.1 in | -0.5 in | -1% |
+| Shoulders | 22.5 in | +0.5 in | +2% |
+| Hips | 44.5 in | -2.5 in | -3% |
+| Calves | 16.3 in | -0.2 in | -1% |
 
 ## Ending Body Measurements
 
 4 Months
 
-| Body Park | Measurement |
-| ----------- | ----------- |
-| Waist |  |
-| Arms |  |
-| Legs |  |
-| Chest |  |
-| Shoulders |  |
-| Hips |  |
-| Calves |  |
+| Body Part | Measurement | Difference (in) |  Difference (%) |
+| ----------- | ----------- | ----------- | ----------- |
+| Waist |  | in | % |
+| Arms |  | in | % |
+| Legs |  | in | % |
+| Chest |  | in | % |
+| Shoulders |  | in | % |
+| Hips |  | in | % |
+| Calves |  | in | % |
