delete this commit

--- a/pages/Certifications/AWS/Cloud_Practitioner_Info.mdx
+++ b/pages/Certifications/AWS/Cloud_Practitioner_Info.mdx
@@ -31,7 +31,7 @@ add to my notes and rinse and repeat until I was consistently getting a passing 
 
 **Passing Score = 700**		
 
-90 minutes  
+90 minutes asdsadasd 
 65 questions, multiple choice/multiple response  
 15 unscored questions that do not affect your score (unidentified)  
 
