--- a/pages/Fitness/Journey/Measurements.mdx
+++ b/pages/Fitness/Journey/Measurements.mdx
@@ -28,6 +28,18 @@
 | Hips | 44.5 in | -2.5 in | -3% |
 | Calves | 16.3 in | -0.2 in | -1% |
 
+3.5 Months
+
+| Body Part | Measurement | Difference (in) |  Difference (%) |
+| ----------- | ----------- | ----------- | ----------- |
+| Waist | 42.0 in | -4.0 in | -8% |
+| Arms | 16.0 in | +2.3 in | +16% |
+| Legs | 33.7 in | +0.0 in | +0% |
+| Chest | 41.5 in | -2.1 in | -4% |
+| Shoulders | 25.0 in | +3.0 in | +13% |
+| Hips | 42.7 in | -3.3 in | -7% |
+| Calves | 16.2 in | -0.3 in | -1% |
+
 ## Ending Body Measurements
 
 4 Months
