added final weight

--- a/pages/Fitness/Journey/Weight.mdx
+++ b/pages/Fitness/Journey/Weight.mdx
@@ -27,9 +27,13 @@
 | 12 | 215.3 | 28.4% |
 | 13 | 211.6 | 28.5% |
 | 14 | 210.4 | 28.1% |
-| 15 |  |  |
-| **16** | **** | **%** |
+| 15 | 209.9 | 27.9% |
+| **16** | **208.4** | **27.4%** |
 
 ## Actual Ending Weight
 
-TBD
+*September 21, 2023*
+208.4 lbs
+
+Total weight lost over 16 weeks = 30.6 lbs
+Average weight lost per week = 1.9125 lbs
