--- a/pages/Fitness/Journey/Weight.mdx
+++ b/pages/Fitness/Journey/Weight.mdx
@@ -32,8 +32,8 @@
 
 ## Actual Ending Weight
 
-*September 21, 2023*
-208.4 lbs
+*September 21, 2023*  
+208.4 lbs  
 
-Total weight lost over 16 weeks = 30.6 lbs
-Average weight lost per week = 1.9125 lbs
+Total weight lost over 16 weeks = **30.6 lbs**  
+Average weight lost per week = **1.9125 lbs**  
