Added 4 month measurements

--- a/pages/Fitness/Journey/Measurements.mdx
+++ b/pages/Fitness/Journey/Measurements.mdx
@@ -46,10 +46,10 @@
 
 | Body Part | Measurement | Difference (in) |  Difference (%) |
 | ----------- | ----------- | ----------- | ----------- |
-| Waist |  | in | % |
-| Arms |  | in | % |
-| Legs |  | in | % |
-| Chest |  | in | % |
-| Shoulders |  | in | % |
-| Hips |  | in | % |
-| Calves |  | in | % |
+| Waist | 41.0 in | in | -10% |
+| Arms | 16.2 in | in | +18% |
+| Legs | 24.3 in | in | % |
+| Chest | 41.5 in | 0in | +0% |
+| Shoulders | 25.2 in | in | +14% |
+| Hips | 42.0 in | in | -8% |
+| Calves | 16.0 in | in | -3% |
