Updated Fitness Journey Pages with Post Program Details

--- a/pages/Fitness/Journey/Goals.mdx
+++ b/pages/Fitness/Journey/Goals.mdx
@@ -11,3 +11,16 @@
 ## Actual Endpoint
 - Weight = 208.4lb
 - Body Fat % = 27.4%
+
+## Post Program
+### Starting Point
+- Weight = 208.4 lb
+- Body Fat % = 27.4%
+
+### Desired End Point
+- Weight = 189.0 lb
+- Body Fat % = 12%
+
+### Actual Endpoint
+- Weight = lb
+- Body Fat % = %
