--- a/pages/Fitness/Journey/Weight.mdx
+++ b/pages/Fitness/Journey/Weight.mdx
@@ -37,3 +37,24 @@
 
 Total weight lost over 16 weeks = **30.6 lbs**  
 Average weight lost per week = **1.9125 lbs**  
+
+## Post Program Progress
+
+First Check In = Thursday, September 28, 2023
+
+| Week | Weight (lb) | Fat % |
+| ----------- | ----------- | ----------- |	
+| **17** | **208.4** | **27.4%** |
+| 18 |  | % |
+| 19 |  | % |
+| 20 |  | % |
+| 21 |  | % |
+| 22 |  | % |
+| 23 |  | % |
+| 24 |  | % |
+| **25** | **** | **%** |
+| 26 |  | % |
+| 27 |  | % |
+| 28 |  | % |
+| 29 |  | % |
+| **30** | **** | **%** |
