--- a/pages/Fitness/Journey/Macros.mdx
+++ b/pages/Fitness/Journey/Macros.mdx
@@ -10,3 +10,12 @@
 | Protein | 240g | 40% |
 | Carbs | 237g | 39% |
 | Fat | 55g | 21% |
+
+## Post Program Target
+
+| Item | Measurement | % of Total Calories (2100) |
+| ----------- | ----------- | ----------- |
+| Daily Caloric Intake (DCI) | 2100 Calories | 100% |
+| Protein | 210g | 40% |
+| Carbs | 210g | 40% |
+| Fat | 46g | 20% |
