--- a/pages/Fitness/Journey/Measurements.mdx
+++ b/pages/Fitness/Journey/Measurements.mdx
@@ -8,11 +8,13 @@
 | ----------- | ----------- |
 | Waist | 46.0 in |
 | Arms | 13.7 in |
-| Legs | 33.7 in |
+| Legs | N/A in |
 | Chest | 43.6 in |
 | Shoulders | 22.0 in |
 | Hips | 46.0 in |
 | Calves | 16.5 in |
+
+**Note:** I measured my legs incorrectly, did it length-wise while I should have been measuring the circumference. Figured this out during the Month 4 measurements.
 
 ## Mid Point Body Measurements
 
@@ -22,7 +24,7 @@
 | ----------- | ----------- | ----------- | ----------- |
 | Waist | 43.5 in | -2.5 in | -6% |
 | Arms | 15.0 in | +1.3 in | +9% |
-| Legs | 33.7 in | +0.0 in | +0% |
+| Legs | N/A in | +0.0 in | +0% |
 | Chest | 43.1 in | -0.5 in | -1% |
 | Shoulders | 22.5 in | +0.5 in | +2% |
 | Hips | 44.5 in | -2.5 in | -3% |
@@ -34,7 +36,7 @@
 | ----------- | ----------- | ----------- | ----------- |
 | Waist | 42.0 in | -4.0 in | -8% |
 | Arms | 16.0 in | +2.3 in | +16% |
-| Legs | 33.7 in | +0.0 in | +0% |
+| Legs | N/A in | +0.0 in | +0% |
 | Chest | 41.5 in | -2.1 in | -4% |
 | Shoulders | 25.0 in | +3.0 in | +13% |
 | Hips | 42.7 in | -3.3 in | -7% |
@@ -44,12 +46,130 @@
 
 4 Months
 
+*September 23, 2023*
+
 | Body Part | Measurement | Difference (in) |  Difference (%) |
 | ----------- | ----------- | ----------- | ----------- |
-| Waist | 41.0 in | in | -10% |
-| Arms | 16.2 in | in | +18% |
-| Legs | 24.3 in | in | % |
-| Chest | 41.5 in | 0in | +0% |
-| Shoulders | 25.2 in | in | +14% |
-| Hips | 42.0 in | in | -8% |
-| Calves | 16.0 in | in | -3% |
+| Waist | 41.0 in | -5.0 in | -10% |
+| Arms | 16.2 in | +2.5 in | +18% |
+| Legs | 24.3 in | +0.0in | +0% |
+| Chest | 41.5 in | +0.0 in | +0% |
+| Shoulders | 25.2 in | +3.2 in | +14% |
+| Hips | 42.0 in | -4.0 in | -8% |
+| Calves | 16.0 in | -0.5 in | -3% |
+
+## Post Program Weekly Measurements
+
+| Week # | Body Part | Measurement | Difference (in) |  Difference (%) |
+| ----------- | ----------- | ----------- | ----------- | ----------- |
+| Week 17 | Waist |  in |  in | % |
+| Week 17 | Arms |  in |  in | % |
+| Week 17 | Legs |  in | in | % |
+| Week 17 | Chest |  in | in | % |
+| Week 17 | Shoulders |  in |  in | % |
+| Week 17 | Hips |  in |  in | % |
+| Week 17 | Calves |  in |  in | % |
+| | | | | |
+| Week 18 | Waist |  in |  in | % |
+| Week 18 | Arms |  in |  in | % |
+| Week 18 | Legs |  in | in | % |
+| Week 18 | Chest |  in | in | % |
+| Week 18 | Shoulders |  in |  in | % |
+| Week 18 | Hips |  in |  in | % |
+| Week 18 | Calves |  in |  in | % |
+| | | | | |
+| Week 19 | Waist |  in |  in | % |
+| Week 19 | Arms |  in |  in | % |
+| Week 19 | Legs |  in | in | % |
+| Week 19 | Chest |  in | in | % |
+| Week 19 | Shoulders |  in |  in | % |
+| Week 19 | Hips |  in |  in | % |
+| Week 19 | Calves |  in |  in | % |
+| | | | | |
+| Week 20 | Waist |  in |  in | % |
+| Week 20 | Arms |  in |  in | % |
+| Week 20 | Legs |  in | in | % |
+| Week 20 | Chest |  in | in | % |
+| Week 20 | Shoulders |  in |  in | % |
+| Week 20 | Hips |  in |  in | % |
+| Week 20 | Calves |  in |  in | % |
+| | | | | |
+| Week 21 | Waist |  in |  in | % |
+| Week 21 | Arms |  in |  in | % |
+| Week 21 | Legs |  in | in | % |
+| Week 21 | Chest |  in | in | % |
+| Week 21 | Shoulders |  in |  in | % |
+| Week 21 | Hips |  in |  in | % |
+| Week 21 | Calves |  in |  in | % |
+| | | | | |
+| Week 22 | Waist |  in |  in | % |
+| Week 22 | Arms |  in |  in | % |
+| Week 22 | Legs |  in | in | % |
+| Week 22 | Chest |  in | in | % |
+| Week 22 | Shoulders |  in |  in | % |
+| Week 22 | Hips |  in |  in | % |
+| Week 22 | Calves |  in |  in | % |
+| | | | | |
+| Week 23 | Waist |  in |  in | % |
+| Week 23 | Arms |  in |  in | % |
+| Week 23 | Legs |  in | in | % |
+| Week 23 | Chest |  in | in | % |
+| Week 23 | Shoulders |  in |  in | % |
+| Week 23 | Hips |  in |  in | % |
+| Week 23 | Calves |  in |  in | % |
+| | | | | |
+| Week 24 | Waist |  in |  in | % |
+| Week 24 | Arms |  in |  in | % |
+| Week 24 | Legs |  in | in | % |
+| Week 24 | Chest |  in | in | % |
+| Week 24 | Shoulders |  in |  in | % |
+| Week 24 | Hips |  in |  in | % |
+| Week 24 | Calves |  in |  in | % |
+| | | | | |
+| Week 25 | Waist |  in |  in | % |
+| Week 25 | Arms |  in |  in | % |
+| Week 25 | Legs |  in | in | % |
+| Week 25 | Chest |  in | in | % |
+| Week 25 | Shoulders |  in |  in | % |
+| Week 25 | Hips |  in |  in | % |
+| Week 25 | Calves |  in |  in | % |
+| | | | | |
+| Week 26 | Waist |  in |  in | % |
+| Week 26 | Arms |  in |  in | % |
+| Week 26 | Legs |  in | in | % |
+| Week 26 | Chest |  in | in | % |
+| Week 26 | Shoulders |  in |  in | % |
+| Week 26 | Hips |  in |  in | % |
+| Week 26 | Calves |  in |  in | % |
+| | | | | |
+| Week 27 | Waist |  in |  in | % |
+| Week 27 | Arms |  in |  in | % |
+| Week 27 | Legs |  in | in | % |
+| Week 27 | Chest |  in | in | % |
+| Week 27 | Shoulders |  in |  in | % |
+| Week 27 | Hips |  in |  in | % |
+| Week 27 | Calves |  in |  in | % |
+| | | | | |
+| Week 28 | Waist |  in |  in | % |
+| Week 28 | Arms |  in |  in | % |
+| Week 28 | Legs |  in | in | % |
+| Week 28 | Chest |  in | in | % |
+| Week 28 | Shoulders |  in |  in | % |
+| Week 28 | Hips |  in |  in | % |
+| Week 28 | Calves |  in |  in | % |
+| | | | | |
+| Week 29 | Waist |  in |  in | % |
+| Week 29 | Arms |  in |  in | % |
+| Week 29 | Legs |  in | in | % |
+| Week 29 | Chest |  in | in | % |
+| Week 29 | Shoulders |  in |  in | % |
+| Week 29 | Hips |  in |  in | % |
+| Week 29 | Calves |  in |  in | % |
+| | | | | |
+| Week 30 | Waist |  in |  in | % |
+| Week 30 | Arms |  in |  in | % |
+| Week 30 | Legs |  in | in | % |
+| Week 30 | Chest |  in | in | % |
+| Week 30 | Shoulders |  in |  in | % |
+| Week 30 | Hips |  in |  in | % |
+| Week 30 | Calves |  in |  in | % |
