added first post program weight

--- a/pages/Fitness/Journey/Weight.mdx
+++ b/pages/Fitness/Journey/Weight.mdx
@@ -42,19 +42,19 @@ Average weight lost per week = **1.9125 lbs**
 
 First Check In = Thursday, September 28, 2023
 
-| Week | Weight (lb) | Fat % |
-| ----------- | ----------- | ----------- |	
-| **17** | **208.4** | **27.4%** |
-| 18 |  | % |
-| 19 |  | % |
-| 20 |  | % |
-| 21 |  | % |
-| 22 |  | % |
-| 23 |  | % |
-| 24 |  | % |
-| **25** | **** | **%** |
-| 26 |  | % |
-| 27 |  | % |
-| 28 |  | % |
-| 29 |  | % |
-| **30** | **** | **%** |
+| Week | Weight (lb) | Fat % | Change +/- | 
+| ----------- | ----------- | ----------- |	 ----------- |	
+| **17** | **212.0** | **28.4%** | +0.0 lb |
+| 18 |  | % |  |
+| 19 |  | % |  |
+| 20 |  | % |  |
+| 21 |  | % |  |
+| 22 |  | % |  |
+| 23 |  | % |  |
+| 24 |  | % |  |
+| **25** | **** | **%** |  |
+| 26 |  | % |  |
+| 27 |  | % |  |
+| 28 |  | % |  |
+| 29 |  | % |  |
+| **30** | **** | **%** |  |
