--- a/pages/Fitness/Fitness_Info_App.mdx
+++ b/pages/Fitness/Fitness_Info_App.mdx
@@ -1,1 +1,3 @@
-<iframe src="https://www.fitness.salmanmalik.co/" width="200" height="200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<div style="position:absolute;top:0;left:0;">
+    <iframe src="https://www.fitness.salmanmalik.co/" width="500" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
