Adding Plan page for Brother Fitness section

--- a/pages/Fitness/Brother/Journey/Plan.mdx
+++ b/pages/Fitness/Brother/Journey/Plan.mdx
@@ -4,7 +4,6 @@
 
 7,000 Steps
 
-
 ## Workouts
 
 4-5x a Week
@@ -13,12 +12,11 @@
 
 3000
 
-
 # Intermittent fasting
-
 
 **Start Eating:** 12PM
 **Stop Eating:** 8PM
 
-**Note:** If you break your fast later in the day, such as 2PM, you then finish eating by 10PM. But, if you go to bed within 2 hours of eating, that will not be good. 
-For two hours before bed, no more eating. 
+**Note:** Do not eat anything the last two hours before bed, adjust your fasting/eating window as necessary.
+
+Take a look at the [Strategy Guide](https://notes.salmanmalik.co/Fitness/Strategy_Guide) for more information on how to manage your nutrition and daily activity.
