added Strategy Guide heading

--- a/pages/Fitness/Strategy_Guide.mdx
+++ b/pages/Fitness/Strategy_Guide.mdx
@@ -1,1 +1,4 @@
+# Strategy Guide
+*Click each of the buttons to see a list of things to keep in mind, use this reference daily.*
+
 <iframe src="https://www.fitness.salmanmalik.co/" width="500" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
